--- a/quick_guide_lineup.ipynb
+++ b/quick_guide_lineup.ipynb
@@ -184,16 +184,7 @@
    "outputs": [],
    "source": [
     "lineUp = LineUp()\n",
-    "dictModelsJp = lineUp.getSony(src='jp')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9f7fd76f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "dictModelsJp = lineUp.getSony(src='jp')\n",
     "dictModelsGlobal = lineUp.getSony(src='global')"
    ]
   },
@@ -213,19 +204,8 @@
    "outputs": [],
    "source": [
     "# Excel 파일에 데이터프레임을 저장\n",
-    "fileName = f\"LineUpJp_{date.today().strftime('%Y-%m-%d')}\"\n",
+    "fileName = f\"LineUp_{date.today().strftime('%Y-%m-%d')}\"\n",
     "dictToexcel(dictModelsJp, fileName=fileName ,sheetName=\"Jp\")\n",
-    "files.download(fileName+\".xlsx\") # 파일 다운로드"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "357d02d6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fileName = f\"LineUpGlobal_{date.today().strftime('%Y-%m-%d')}\"\n",
     "dictToexcel(dictModelsGlobal, fileName=fileName ,sheetName=\"Global\")\n",
     "files.download(fileName+\".xlsx\") # 파일 다운로드"
    ]
