--- a/quick_guide_lineup.ipynb
+++ b/quick_guide_lineup.ipynb
@@ -29,9 +29,7 @@
   {
    "cell_type": "markdown",
    "id": "30216803",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Install Colab selenium & crome driver"
    ]
@@ -40,9 +38,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "9142d357",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# 이 부분은 처음 한번만 실행.\n",
@@ -98,7 +94,10 @@
     "pip install bs4\n",
     "\n",
     "# install getmodelspec\n",
-    "pip install getmodelspec -U"
+    "pip install getmodelspec -U\n",
+    "\n",
+    "# install googletrans\n",
+    "pip install googletrans==4.0.0-rc1"
    ]
   },
   {
