--- a/quick_guide_lineup.ipynb
+++ b/quick_guide_lineup.ipynb
@@ -183,7 +183,7 @@
    "outputs": [],
    "source": [
     "lineUp = LineUp()\n",
-    "dictSonyJp = lineUp.getSony(src='jp')\n",
+    "# dictSonyJp = lineUp.getSony(src='jp')  # 크롬 Driver에서 SONY JP 웹사이트의 로딩이 안되어 중지\n",
     "dictSonyGlobal = lineUp.getSony(src='global')\n",
     "dictPana = lineUp.getPana()"
    ]
@@ -205,7 +205,7 @@
    "source": [
     "# Excel 파일에 데이터프레임을 저장\n",
     "fileName = f\"LineUp_{date.today().strftime('%Y-%m-%d')}\"\n",
-    "dictToexcel(dictSonyJp, fileName=fileName ,sheetName=\"SonyJp\")\n",
+    "# dictToexcel(dictSonyJp, fileName=fileName ,sheetName=\"SonyJp\") # 크롬 Driver에서 SONY JP 웹사이트의 로딩이 안되어 중지\n",
     "dictToexcel(dictSonyGlobal, fileName=fileName ,sheetName=\"SonyGlobal\")\n",
     "dictToexcel(dictPana, fileName=fileName ,sheetName=\"PanaGlobal\")\n",
     "files.download(fileName+\".xlsx\") # 파일 다운로드"
