--- a/quick_guide_lineup.ipynb
+++ b/quick_guide_lineup.ipynb
@@ -184,8 +184,8 @@
    "source": [
     "lineUp = LineUp()\n",
     "# dictSonyJp = lineUp.getSony(src='jp')  # 크롬 Driver에서 SONY JP 웹사이트의 로딩이 안되어 중지\n",
-    "dictSonyGlobal = lineUp.getSony(src='global')\n",
-    "dictPana = lineUp.getPana()"
+    "dictSonyGlobal = lineUp.getSony(src='global', fastMode=True, toExcel=True)\n",
+    "dictPana = lineUp.getPana(toExcel=True)"
    ]
   },
   {
