--- a/notebook/get_freq_from_web_comments_.ipynb
+++ b/notebook/get_freq_from_web_comments_.ipynb
@@ -94,16 +94,16 @@
    "id": "462acd5c-651c-4acb-9160-422c2fb59f11",
    "metadata": {},
    "source": [
-    "## nltk 단어장 받기\n",
+    "## nltk 다운로드\n",
     "\n",
-    "- nltk.download('punkt'): 이 명령은 NLTK에서 토큰화(tokenization)와 같은 텍스트 처리 작업을 수행하는 데 필요한 Punkt 토큰화 모델을 다운로드합니다. Punkt 토큰화는 문장을 단어로 나누는 작업을 돕는 중요한 도구 중 하나입니다.\n",
+    "- nltk.download('punkt'): NLTK에서 토큰화(tokenization)와 같은 텍스트 처리 작업을 수행하는 데 필요한 Punkt 토큰화 모델을 다운로드. Punkt 토큰화는 문장을 단어로 나누는 작업.\n",
     "\n",
     "- \r\n",
-    "nltk.download('stopwords'): 이 명령은 NLTK에서 불용어(stopwords) 데이터를 다운로드합니다. 불용어는 자연어 처리 작업에서 일반적으로 무시되는 단어 목록입니다. 이 명령을 사용하여 일반적인 불용어 목록을 다운로드하여 텍스트 데이터에서 불용어를 제거하는 데 사용할 수 있습니\n",
+    "nltk.download('stopwords'): NLTK에서 불용어(stopwords) 데이터를 다운로드. 불용어는 자연어 처리 작업에서 일반적으로 무시되는 단어 목록.\n",
     "\n",
     "- \r\n",
     "\r\n",
-    "nltk.download('averaged_perceptron_tagger'): 이 명령은 품사 태깅(Part of Speech Tagging)을 행하는 데 필요한 Averaged Perceptron 품사 태깅 모델을 다운로드합니다. 품사 태깅은 단어의 문법적 역할을 정의하는 작업으로, 이 모델은 단어에 대한 품사 정보를 제공합니다."
+    "nltk.download('averaged_perceptron_tagger'): 품사 태깅(Part of Speech Tagging)에 필요한 Averaged Perceptron 품사 태깅 모델을 다운로드. 품사 태깅은 단어의 문법적 역할을 정의하는 작업."
    ]
   },
   {
