--- a/notebook/get_freq_from_web_comments_.ipynb
+++ b/notebook/get_freq_from_web_comments_.ipynb
@@ -98,12 +98,9 @@
     "\n",
     "- nltk.download('punkt'): NLTK에서 토큰화(tokenization)와 같은 텍스트 처리 작업을 수행하는 데 필요한 Punkt 토큰화 모델을 다운로드. Punkt 토큰화는 문장을 단어로 나누는 작업.\n",
     "\n",
-    "- \r\n",
-    "nltk.download('stopwords'): NLTK에서 불용어(stopwords) 데이터를 다운로드. 불용어는 자연어 처리 작업에서 일반적으로 무시되는 단어 목록.\n",
+    "- nltk.download('stopwords'): NLTK에서 불용어(stopwords) 데이터를 다운로드. 불용어는 자연어 처리 작업에서 일반적으로 무시되는 단어 목록.\n",
     "\n",
-    "- \r\n",
-    "\r\n",
-    "nltk.download('averaged_perceptron_tagger'): 품사 태깅(Part of Speech Tagging)에 필요한 Averaged Perceptron 품사 태깅 모델을 다운로드. 품사 태깅은 단어의 문법적 역할을 정의하는 작업."
+    "- nltk.download('averaged_perceptron_tagger'): 품사 태깅(Part of Speech Tagging)에 필요한 Averaged Perceptron 품사 태깅 모델을 다운로드. 품사 태깅은 단어의 문법적 역할을 정의하는 작업."
    ]
   },
   {
