--- a/notebook/quick_guide_get_models.ipynb
+++ b/notebook/quick_guide_get_models.ipynb
@@ -46,7 +46,25 @@
     "import platform\n",
     "current_os = platform.system()\n",
     "if current_os == \"Linux\":\n",
-    "    !bash install_env.sh\n",
+    "\n",
+    "    # Update pip\n",
+    "    %pip install --upgrade pip\n",
+    "    # Install required Python packages\n",
+    "    %pip install -U openpyxl requests selenium beautifulsoup4 tqdm numpy pandas\n",
+    "    # Update apt-get\n",
+    "    %apt-get update\n",
+    "    \n",
+    "    # Download and setup Chrome\n",
+    "    %wget https://edgedl.me.gvt1.com/edgedl/chrome/chrome-for-testing/119.0.6045.105/linux64/chrome-linux64.zip\n",
+    "    %unzip chrome-linux64.zip\n",
+    "    %rm chrome-linux64.zip\n",
+    "    %mv chrome-linux64 chrome\n",
+    "    \n",
+    "    # Download and setup ChromeDriver\n",
+    "    %wget https://edgedl.me.gvt1.com/edgedl/chrome/chrome-for-testing/119.0.6045.105/linux64/chromedriver-linux64.zip\n",
+    "    %unzip chromedriver-linux64.zip\n",
+    "    %rm chromedriver-linux64.zip\n",
+    "    %mv chromedriver-linux64 chromedriver\n",
     "elif current_os == \"Windows\":\n",
     "    print(\"windows\")\n",
     "else:\n",
