--- a/notebook/quick_guide_get_models.ipynb
+++ b/notebook/quick_guide_get_models.ipynb
@@ -5,7 +5,7 @@
    "id": "1f063cfb",
    "metadata": {},
    "source": [
-    "# QuickGuide For get models\n",
+    "# QuickGuide for get models\n",
     "\n",
     "[프로젝트 페이지: Research-on-the-TV-market](https://github.com/xikest/research-market-tv)"
    ]
@@ -16,16 +16,6 @@
    "metadata": {},
    "source": [
     "## Env setting: Install Colab selenium & crome driver"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "9142d357",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip install -U getmodelspec"
    ]
   },
   {
@@ -46,29 +36,39 @@
     "import platform\n",
     "current_os = platform.system()\n",
     "if current_os == \"Linux\":\n",
-    "    # Update pip\n",
-    "    %pip install --upgrade pip\n",
-    "        \n",
-    "    # Install required Python packages\n",
-    "    %pip install -U openpyxl requests selenium beautifulsoup4 tqdm numpy pandas\n",
-    "    # Update apt-get\n",
-    "    %apt-get update\n",
+    "  !pip install --upgrade pip\n",
     "    \n",
-    "    # Download and setup Chrome\n",
-    "    %wget https://edgedl.me.gvt1.com/edgedl/chrome/chrome-for-testing/119.0.6045.105/linux64/chrome-linux64.zip\n",
-    "    %unzip chrome-linux64.zip\n",
-    "    %rm chrome-linux64.zip\n",
-    "    %mv chrome-linux64 chrome\n",
-    "    \n",
-    "    # Download and setup ChromeDriver\n",
-    "    %wget https://edgedl.me.gvt1.com/edgedl/chrome/chrome-for-testing/119.0.6045.105/linux64/chromedriver-linux64.zip\n",
-    "    %unzip chromedriver-linux64.zip\n",
-    "    %rm chromedriver-linux64.zip\n",
-    "    %mv chromedriver-linux64 chromedriver\n",
+    "  # Install required Python packages\n",
+    "  !pip install -U openpyxl requests selenium beautifulsoup4 tqdm numpy pandas\n",
+    "\n",
+    "  # Update apt-get\n",
+    "  !apt-get update\n",
+    "\n",
+    "  # Download and setup Chrome\n",
+    "  !wget https://edgedl.me.gvt1.com/edgedl/chrome/chrome-for-testing/119.0.6045.105/linux64/chrome-linux64.zip\n",
+    "  !unzip chrome-linux64.zip\n",
+    "  !rm chrome-linux64.zip\n",
+    "  !mv chrome-linux64 chrome\n",
+    "\n",
+    "  # Download and setup ChromeDriver\n",
+    "  !wget https://edgedl.me.gvt1.com/edgedl/chrome/chrome-for-testing/119.0.6045.105/linux64/chromedriver-linux64.zip\n",
+    "  !unzip chromedriver-linux64.zip\n",
+    "  !rm chromedriver-linux64.zip\n",
+    "  !mv chromedriver-linux64 chromedriver\n",
     "elif current_os == \"Windows\":\n",
     "    print(\"windows\")\n",
     "else:\n",
     "    print(\"지원하지 않는 운영체제입니다.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "9142d357",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install -U getmodelspec"
    ]
   },
   {
