--- a/notebook/quick_guide_get_models.ipynb
+++ b/notebook/quick_guide_get_models.ipynb
@@ -87,7 +87,8 @@
    "outputs": [],
    "source": [
     "from modelspec import ModelScraper, FileManager\n",
-    "from datetime import date"
+    "from datetime import date\n",
+    "from google.colab import files"
    ]
   },
   {
