--- a/notebook/quick_guide_get_models.ipynb
+++ b/notebook/quick_guide_get_models.ipynb
@@ -86,9 +86,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from modelspec import ModelScraper, FileManager\n",
-    "from datetime import date\n",
-    "from google.colab import files"
+    "from modelspec import ModelScraper, ModelScraperjp\n",
+    "from modelspec.tools import FileManager\n",
+    "from datetime import date"
    ]
   },
   {
@@ -100,19 +100,23 @@
    "source": [
     "webdriver_path = \"/content/chromedriver/chromedriver\"\n",
     "browser_path = \"/content/chrome/chrome\"\n",
-    "enable_headless = True\n",
-    "\n",
-    "sms = ModelScraper(webdriver_path = webdriver_path, browser_path=browser_path, enable_headless=enable_headless)\n",
-    "dict_models = sms.get_models_info()"
+    "enable_headless = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "991f097d",
+   "execution_count": null,
+   "id": "b6f1bcb4-04e6-4125-8c92-40feb9c431e0",
    "metadata": {},
    "outputs": [],
    "source": [
+    "smsj = ModelScraperjp(webdriver_path = webdriver_path, browser_path=browser_path, enable_headless=enable_headless)\n",
+    "dict_models = smsj.get_models_info()\n",
+    "file_name_jp = f\"sony_jp_model_info_web_{date.today().strftime('%Y-%m-%d')}\"\n",
+    "FileManager.dict_to_excel(dict_models, file_name=file_name, sheet_name=\"jp\")\n",
+    "\n",
+    "sms = ModelScraper(webdriver_path = webdriver_path, browser_path=browser_path, enable_headless=enable_headless)\n",
+    "dict_models = sms.get_models_info()\n",
     "file_name = f\"sony_model_info_web_{date.today().strftime('%Y-%m-%d')}\"\n",
     "FileManager.dict_to_excel(dict_models, file_name=file_name, sheet_name=\"global\")"
    ]
@@ -140,7 +144,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "files.download(fileName+\".xlsx\") # 파일 다운로드"
+    "files.download(fileName+\".xlsx\") # 파일 다운로드\n",
+    "files.download(file_name_jp+\".xlsx\") # 파일 다운로드"
    ]
   },
   {
