--- a/notebook/quick_guide_get_models.ipynb
+++ b/notebook/quick_guide_get_models.ipynb
@@ -88,7 +88,8 @@
    "source": [
     "from modelspec import ModelScraper, ModelScraperjp\n",
     "from modelspec.tools import FileManager\n",
-    "from datetime import date"
+    "from datetime import date\n",
+    "from google.colab import files"
    ]
   },
   {
@@ -101,6 +102,24 @@
     "webdriver_path = \"/content/chromedriver/chromedriver\"\n",
     "browser_path = \"/content/chrome/chrome\"\n",
     "enable_headless = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04403ca4-778f-4866-b206-542d682ce23d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# smsj = ModelScraperjp(webdriver_path = webdriver_path, browser_path=browser_path, enable_headless=enable_headless)\n",
+    "# dict_models = smsj.get_models_info()\n",
+    "# file_name = f\"sony_model_info_web_{date.today().strftime('%Y-%m-%d')}\"\n",
+    "# FileManager.dict_to_excel(dict_models, file_name=file_name, sheet_name=\"jp\")\n",
+    "\n",
+    "# sms = ModelScraper(webdriver_path = webdriver_path, browser_path=browser_path, enable_headless=enable_headless)\n",
+    "# dict_models = sms.get_models_info()\n",
+    "# file_name = f\"sony_model_info_web_{date.today().strftime('%Y-%m-%d')}\"\n",
+    "# FileManager.dict_to_excel(dict_models, file_name=file_name, sheet_name=\"global\")"
    ]
   },
   {
@@ -127,6 +146,16 @@
    "metadata": {},
    "source": [
     "## Act"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b6f31bc-00ae-4f77-aeb4-c566532aaa0b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# files.download(fileName+\".xlsx\") # 파일 다운로드"
    ]
   },
   {
