--- a/notebook/quick_guide_sentgpt.ipynb
+++ b/notebook/quick_guide_sentgpt.ipynb
@@ -64,6 +64,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b776a61b-4910-4322-8d82-1b0aa176a395",
+   "metadata": {},
+   "source": [
+    "### 시각화 function"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "e871abce-040f-4979-b0f8-2a35af09e30f",
@@ -229,16 +237,9 @@
     "\n",
     "  #그래프 만들기\n",
     "  df_analyzed_results = analyzed_results_df - 5  #그래프 범위 조정\n",
+    "  print(f\"{file_name}, Plot\")\n",
     "  plot_hist_each(df_analyzed_results, output_folder=output_folder, file_name=file_name)\n",
     "  plot_hist_all(df_analyzed_results, output_folder=output_folder, file_name=file_name)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c2a34efd-98d1-4f8e-be1f-33f1935234a0",
-   "metadata": {},
-   "source": [
-    "## 시각화"
    ]
   }
  ],
