--- a/notebook/quick_guide_get_models.ipynb
+++ b/notebook/quick_guide_get_models.ipynb
@@ -40,7 +40,8 @@
     "    \n",
     "  # Install required Python packages\n",
     "  !pip install -U openpyxl requests selenium beautifulsoup4 tqdm numpy pandas\n",
-    "\n",
+    "  !pip install -U getmodelspec\n",
+    "    \n",
     "  # Update apt-get\n",
     "  !apt-get update\n",
     "\n",
@@ -67,16 +68,14 @@
    "id": "9142d357",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "!pip install -U getmodelspec"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
    "id": "6e1cbb67",
    "metadata": {},
    "source": [
-    "## Package 세팅 및 실행"
+    "## Env. 세팅"
    ]
   },
   {
@@ -105,42 +104,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "04403ca4-778f-4866-b206-542d682ce23d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# smsj = ModelScraperjp(webdriver_path = webdriver_path, browser_path=browser_path, enable_headless=enable_headless)\n",
-    "# dict_models = smsj.get_models_info()\n",
-    "# file_name = f\"sony_model_info_web_{date.today().strftime('%Y-%m-%d')}\"\n",
-    "# FileManager.dict_to_excel(dict_models, file_name=file_name, sheet_name=\"jp\")\n",
-    "\n",
-    "# sms = ModelScraper(webdriver_path = webdriver_path, browser_path=browser_path, enable_headless=enable_headless)\n",
-    "# dict_models = sms.get_models_info()\n",
-    "# file_name = f\"sony_model_info_web_{date.today().strftime('%Y-%m-%d')}\"\n",
-    "# FileManager.dict_to_excel(dict_models, file_name=file_name, sheet_name=\"global\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b6f1bcb4-04e6-4125-8c92-40feb9c431e0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "smsj = ModelScraperjp(webdriver_path = webdriver_path, browser_path=browser_path, enable_headless=enable_headless)\n",
-    "dict_models = smsj.get_models_info()\n",
-    "file_name_jp = f\"sony_jp_model_info_web_{date.today().strftime('%Y-%m-%d')}\"\n",
-    "FileManager.dict_to_excel(dict_models, file_name=file_name_jp, sheet_name=\"jp\")\n",
-    "\n",
-    "sms = ModelScraper(webdriver_path = webdriver_path, browser_path=browser_path, enable_headless=enable_headless)\n",
-    "dict_models = sms.get_models_info()\n",
-    "file_name = f\"sony_model_info_web_{date.today().strftime('%Y-%m-%d')}\"\n",
-    "FileManager.dict_to_excel(dict_models, file_name=file_name, sheet_name=\"global\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "0429c013",
    "metadata": {},
@@ -151,11 +114,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b6f31bc-00ae-4f77-aeb4-c566532aaa0b",
+   "id": "04403ca4-778f-4866-b206-542d682ce23d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# files.download(fileName+\".xlsx\") # 파일 다운로드"
+    "smsj = ModelScraperjp(webdriver_path = webdriver_path, browser_path=browser_path, enable_headless=enable_headless)\n",
+    "dict_models = smsj.get_models_info()\n",
+    "file_name = f\"sony_model_info_web_{date.today().strftime('%Y-%m-%d')}\"\n",
+    "FileManager.dict_to_excel(dict_models, file_name=file_name, sheet_name=\"jp\")\n",
+    "\n",
+    "sms = ModelScraper(webdriver_path = webdriver_path, browser_path=browser_path, enable_headless=enable_headless)\n",
+    "dict_models = sms.get_models_info()\n",
+    "file_name = f\"sony_model_info_web_{date.today().strftime('%Y-%m-%d')}\"\n",
+    "FileManager.dict_to_excel(dict_models, file_name=file_name, sheet_name=\"global\")"
    ]
   },
   {
@@ -169,12 +140,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62e82f02",
+   "id": "6b6f31bc-00ae-4f77-aeb4-c566532aaa0b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "files.download(fileName+\".xlsx\") # 파일 다운로드\n",
-    "files.download(file_name_jp+\".xlsx\") # 파일 다운로드"
+    "files.download(file_name+\".xlsx\") # 파일 다운로드"
    ]
   },
   {
