--- a/notebook/quick_guide_get_rtings.ipynb
+++ b/notebook/quick_guide_get_rtings.ipynb
@@ -5,7 +5,7 @@
    "id": "1f063cfb",
    "metadata": {},
    "source": [
-    "# QuickGuide for get models\n",
+    "# QuickGuide for rtings\n",
     "\n",
     "[프로젝트 페이지: Research-on-the-TV-market](https://github.com/xikest/research-market-tv)"
    ]
@@ -77,10 +77,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from modelspec import ModelScraper, ModelScraperjp\n",
+    "from modelspec import Rtings\n",
     "from modelspec.tools import FileManager\n",
     "from datetime import date\n",
     "from google.colab import files"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a2b21aa-7bf2-4e1e-9540-4db922069088",
+   "metadata": {},
+   "source": [
+    "### 분석 폴더\n",
+    "- `input_data`에 파일을 넣어주세요."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "61b29bb0-c3c9-40dc-93c9-1858e9bf0dba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "intput_folder = Path(\"input_data\")  # 폴더 이름을 지정\n",
+    "\n",
+    "# 폴더가 존재하지 않으면 폴더 생성\n",
+    "if not intput_folder.exists():\n",
+    "    intput_folder.mkdir(parents=True)\n",
+    "\n",
+    "output_comments_folder = Path('results/comments')  \n",
+    "if not output_comments_folder.exists():\n",
+    "  output_comments_folder.mkdir(parents=True, exist_ok=True)\n",
+    "    \n",
+    "output_scores_folder = Path('results/scores')  \n",
+    "if not output_scores_folder.exists():\n",
+    "  output_scores_folder.mkdir(parents=True, exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f02b7d40-921f-4b43-8b65-d9c3e6f92cc6",
+   "metadata": {},
+   "source": [
+    "## 준비"
    ]
   },
   {
@@ -93,6 +132,20 @@
     "webdriver_path = \"/content/chromedriver/chromedriver\"\n",
     "browser_path = \"/content/chrome/chrome\"\n",
     "enable_headless = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae276e80-1eb4-4561-9609-35b6ac3c9a5d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## 불러온 데이터 경로\n",
+    "file_name=\"rtings_url.xlsx\"\n",
+    "file_path = intput_folder / file_name\n",
+    "df = pd.read_excel(file_path)\n",
+    "urls = df[\"urls\"]"
    ]
   },
   {
@@ -110,15 +163,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "smsj = ModelScraperjp(webdriver_path = webdriver_path, browser_path=browser_path, enable_headless=enable_headless)\n",
-    "dict_models = smsj.get_models_info()\n",
-    "file_name = f\"sony_model_info_web_{date.today().strftime('%Y-%m-%d')}\"\n",
-    "FileManager.dict_to_excel(dict_models, file_name=file_name, sheet_name=\"jp\")\n",
+    "for url in urls:\n",
+    "    maker = url.split(\"/\")[-2]\n",
+    "    model = url.split(\"/\")[-1]\n",
     "\n",
-    "sms = ModelScraper(webdriver_path = webdriver_path, browser_path=browser_path, enable_headless=enable_headless)\n",
-    "dict_models = sms.get_models_info()\n",
-    "file_name = f\"sony_model_info_web_{date.today().strftime('%Y-%m-%d')}\"\n",
-    "FileManager.dict_to_excel(dict_models, file_name=file_name, sheet_name=\"global\")"
+    "\n",
+    "    rtings = Rtings(webdriver_path = webdriver_path, browser_path=browser_path, enable_headless=enable_headless)\n",
+    "\n",
+    "    # 저장할 데이터 경로\n",
+    "    file_name = f\"{maker}_{model}_rtings_comments_{date.today().strftime('%Y-%m-%d')}.xlsx\"\n",
+    "    comments_file_name= output_comments_folder/file_name\n",
+    "    comments_df = rtings.get_commetns(url, format_df=True)\n",
+    "    comments_df.to_excel(f\"{output_comments_folder}\", index=False, sheet_name='comments')\n",
+    "\n",
+    "    # 저장할 데이터 경로\n",
+    "    file_name = f\"{maker}_{model}_rtings_scores_{date.today().strftime('%Y-%m-%d')}.xlsx\"\n",
+    "    scores_file_name = output_scores_folder/file_name\n",
+    "    score_df= rtings.get_score(url,format_df=True)\n",
+    "    score_df.to_excel(f\"{scores_fule_name}\", index=False, sheet_name='scores')"
    ]
   },
   {
@@ -136,7 +198,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "files.download(file_name+\".xlsx\") # 파일 다운로드"
+    "files.download(comments_file_name+\".xlsx\") # 파일 다운로드\n",
+    "files.download(scores_file_name+\".xlsx\") # 파일 다운로드"
    ]
   },
   {
