--- a/notebook/quick_guide_get_rtings.ipynb
+++ b/notebook/quick_guide_get_rtings.ipynb
@@ -80,6 +80,8 @@
     "from modelspec import Rtings\n",
     "from modelspec.tools import FileManager\n",
     "from datetime import date\n",
+    "from pathlib import Path\n",
+    "import pandas as pd\n",
     "from google.colab import files"
    ]
   },
@@ -89,7 +91,8 @@
    "metadata": {},
    "source": [
     "### 분석 폴더\n",
-    "- `input_data`에 파일을 넣어주세요."
+    "- `input_data`: 검색할 데이터 폴더\n",
+    "- `results`: 검색된 데이터 폴더"
    ]
   },
   {
@@ -135,6 +138,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "997d0838-45c0-4956-a753-e16ec31ea176",
+   "metadata": {},
+   "source": [
+    "- 파일 명은 `rtings_url.xlsx`으로 하고, column 명은 `urls`으로 하여 `input_data`폴더에 넣어주세요"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "ae276e80-1eb4-4561-9609-35b6ac3c9a5d",
@@ -153,7 +164,7 @@
    "id": "0429c013",
    "metadata": {},
    "source": [
-    "## Act"
+    "## 실행"
    ]
   },
   {
@@ -174,13 +185,13 @@
     "    file_name = f\"{maker}_{model}_rtings_comments_{date.today().strftime('%Y-%m-%d')}.xlsx\"\n",
     "    comments_file_name= output_comments_folder/file_name\n",
     "    comments_df = rtings.get_commetns(url, format_df=True)\n",
-    "    comments_df.to_excel(f\"{output_comments_folder}\", index=False, sheet_name='comments')\n",
+    "    comments_df.to_excel(f\"{comments_file_name}\", index=False, sheet_name='comments')\n",
     "\n",
     "    # 저장할 데이터 경로\n",
     "    file_name = f\"{maker}_{model}_rtings_scores_{date.today().strftime('%Y-%m-%d')}.xlsx\"\n",
     "    scores_file_name = output_scores_folder/file_name\n",
     "    score_df= rtings.get_score(url,format_df=True)\n",
-    "    score_df.to_excel(f\"{scores_fule_name}\", index=False, sheet_name='scores')"
+    "    score_df.to_excel(f\"{scores_file_name}\", index=False, sheet_name='scores')"
    ]
   },
   {
@@ -198,8 +209,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "files.download(comments_file_name+\".xlsx\") # 파일 다운로드\n",
-    "files.download(scores_file_name+\".xlsx\") # 파일 다운로드"
+    "!zip -r /content/results.zip /content/results/\n",
+    "files.download('/content/results.zip')"
    ]
   },
   {
