--- a/notebook/quick_guide_sentgpt.ipynb
+++ b/notebook/quick_guide_sentgpt.ipynb
@@ -249,6 +249,33 @@
     "  plot_hist_each(df_analyzed_results, output_folder=output_folder, file_name=file_name)\n",
     "  plot_hist_all(df_analyzed_results, output_folder=output_folder, file_name=file_name)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca0474ee-b94e-44b7-8138-8dfb5f442620",
+   "metadata": {},
+   "source": [
+    "- colab에서 파일 받기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b04c0cd1-693e-424c-9698-c0863394118b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!zip -r /content/results_sentgpt.zip /content/results/\n",
+    "files.download('/content/results_sentgpt.zip')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a60021f2-b566-4fc2-8f18-0caf5d90920f",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
   }
  ],
  "metadata": {
