--- a/notebook/quick_guide_get_rtings.ipynb
+++ b/notebook/quick_guide_get_rtings.ipynb
@@ -209,8 +209,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!zip -r /content/results.zip /content/results/\n",
-    "files.download('/content/results.zip')"
+    "!zip -r /content/results_rtings.zip /content/results/\n",
+    "files.download('/content/results_rtings.zip')"
    ]
   },
   {
