--- a/notebook/quick_guide_sentgpt.ipynb
+++ b/notebook/quick_guide_sentgpt.ipynb
@@ -168,7 +168,8 @@
    "id": "0f23211a-f304-46b4-b6a5-e3665cb1fa4e",
    "metadata": {},
    "source": [
-    "### open API key"
+    "### GPT setting\n",
+    "- [GPT model info](https://platform.openai.com/docs/models/continuous-model-upgrades)"
    ]
   },
   {
@@ -178,7 +179,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "API_KEY = \"\""
+    "API_KEY = \"\"\n",
+    "gpt_model=\"gpt-3.5-turbo-1106\""
    ]
   },
   {
@@ -210,7 +212,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "stm = SentiGPT(API_KEY)"
+    "stm = SentiGPT(api_key=API_KEY, gpt_model=gpt_model)"
    ]
   },
   {
@@ -229,25 +231,29 @@
    "outputs": [],
    "source": [
     "for excel_file in excel_files:\n",
-    "  # 데이터 셋\n",
-    "  excel_file_path = excel_file\n",
-    "  df_uploaded = pd.read_excel(excel_file_path)\n",
-    "  df_sentences = df_uploaded\n",
-    "\n",
-    "  # GPT 분석\n",
-    "  sentences_list = [sentence for sentence in df_sentences[\"sentences\"]]  # 리스트로 변환\n",
-    "  keywords_list=[\"brightness\", \"color\", \"contrast\", \"reflection\", \"viewing angle\"]\n",
-    "  analyzed_results_df = stm.analyze_sentences(sentences_list, keywords_list)\n",
-    "\n",
-    "  # 분석 파일 저장\n",
-    "  file_name=excel_file_path.name.split(\".\")[0]\n",
-    "  analyzed_results_df.to_csv(file_name, index=False, encoding='utf-8')\n",
-    "\n",
-    "  #그래프 만들기\n",
-    "  df_analyzed_results = analyzed_results_df - 5  #그래프 범위 조정\n",
-    "  print(f\"{file_name}, Plot\")\n",
-    "  plot_hist_each(df_analyzed_results, output_folder=output_folder, file_name=file_name)\n",
-    "  plot_hist_all(df_analyzed_results, output_folder=output_folder, file_name=file_name)"
+    "    # 데이터 셋\n",
+    "    excel_file_path = excel_file\n",
+    "    df_uploaded = pd.read_excel(excel_file_path)\n",
+    "    df_sentences = df_uploaded\n",
+    "    \n",
+    "    # GPT 분석\n",
+    "    sentences_list = [sentence for sentence in df_sentences[\"sentences\"]]  # 리스트로 변환\n",
+    "    keywords_list=[\"brightness\", \"color\", \"contrast\", \"reflection\", \"viewing angle\"]\n",
+    "    analyzed_results_df = stm.analyze_sentences(sentences_list, keywords_list)\n",
+    "    \n",
+    "    # 분석 파일 저장\n",
+    "    file_name=excel_file_path.name.split(\".\")[0]\n",
+    "    output_file_path = output_folder/file_name\n",
+    " \n",
+    "    if not output_file_path.exists():\n",
+    "        output_file_path.mkdir(parents=True, exist_ok=True)\n",
+    "    analyzed_results_df.to_csv(output_file_path / f\"analyzed_results_{file_name}.csv\", index=False, encoding='utf-8')\n",
+    "    \n",
+    "    #그래프 만들기\n",
+    "    # df_analyzed_results = analyzed_results_df - 5  #그래프 범위 조정\n",
+    "    print(f\"{file_name}, Plot\")\n",
+    "    stm.plot_hist_all(output_folder=output_file_path, file_name=file_name)\n",
+    "    stm.plot_hist_each(output_folder=output_file_path, file_name=file_name)\n"
    ]
   },
   {
