--- a/notebook/quick_guide_sentgpt.ipynb
+++ b/notebook/quick_guide_sentgpt.ipynb
@@ -58,82 +58,10 @@
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.ticker import MaxNLocator\n",
     "import seaborn as sns\n",
-    "from sentigpt import SentiGPT\n",
     "from pathlib import Path\n",
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b776a61b-4910-4322-8d82-1b0aa176a395",
-   "metadata": {},
-   "source": [
-    "### 시각화 function"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e871abce-040f-4979-b0f8-2a35af09e30f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def plot_hist_each(df_analyzed_results, output_folder, file_name):\n",
-    "    columns = df_analyzed_results.columns\n",
-    "    for i, column in enumerate(columns):\n",
-    "        sns.set_style(\"white\")\n",
-    "        fig, axes = plt.subplots(figsize=(10, 4), sharey=True)\n",
-    "        \n",
-    "        sns.histplot(df_analyzed_results[column], kde=True, label=column, bins=10, binwidth=1,  ax=axes)\n",
-    "        axes.set_ylabel(\"Density\")\n",
-    "        axes.set_title(f\"{column}\")\n",
-    "        # axes.legend(loc=\"upper right\")\n",
-    "        axes.set_xlim(-5, 5)\n",
-    "        axes.set_xlabel(\"\")\n",
-    "        bins = range(-5,6)\n",
-    "        axes.set_xticks(bins)\n",
-    "        axes.yaxis.set_major_locator(MaxNLocator(integer=True))\n",
-    "        sns.despine()\n",
-    "        plt.tight_layout()\n",
-    "        save_path = output_folder / f\"{file_name}_{column}_histogram.png\"\n",
-    "        plt.savefig(save_path, format='png', dpi=300)\n",
-    "        plt.show()\n",
-    "\n",
-    "\n",
-    "def plot_hist_all(df_analyzed_results, output_folder, file_name):\n",
-    "\n",
-    "  sns.set(style=\"white\")\n",
-    "  fig, axes = plt.subplots(figsize=(10, 4))\n",
-    "\n",
-    "\n",
-    "  # 데이터프레임의 각 열에 대해 히스토그램 그리기\n",
-    "  for i, column in enumerate(df_analyzed_results.columns):\n",
-    "      color = sns.color_palette(\"Set1\", len(df_analyzed_results.columns))[i]  # Set1 컬러맵 사용\n",
-    "      sns.histplot(df_analyzed_results[column], kde=True, label=column, bins=10, binwidth=1, ax=axes, color=color)\n",
-    "\n",
-    "  # x축 설정\n",
-    "  axes.set_xlim(-5, 5)\n",
-    "  bins = range(-5, 6)\n",
-    "  axes.set_xticks(bins)\n",
-    "\n",
-    "  # y축 눈금 설정 (정수로)\n",
-    "  axes.yaxis.set_major_locator(MaxNLocator(integer=True))\n",
-    "\n",
-    "  # 레이블 및 타이틀 설정\n",
-    "  axes.set_ylabel(\"Density\")\n",
-    "  axes.set_title(\"\")\n",
-    "  axes.set_xlabel(\"\")\n",
-    "\n",
-    "  # 범례 표시\n",
-    "  axes.legend()\n",
-    "  sns.despine()\n",
-    "\n",
-    "  # 그래프 저장\n",
-    "  save_path = output_folder / f\"{file_name}_all_columns_histogram.png\"\n",
-    "  plt.savefig(save_path, format='png', dpi=300)\n",
-    "\n",
-    "  # 그래프 출력\n",
-    "  plt.show()       "
+    "import pandas as pd\n",
+    "from google.colab import files\n",
+    "from sentigpt import SentiGPT"
    ]
   },
   {
