--- a/notebook/quick_guide_get_models.ipynb
+++ b/notebook/quick_guide_get_models.ipynb
@@ -112,8 +112,8 @@
    "source": [
     "smsj = ModelScraperjp(webdriver_path = webdriver_path, browser_path=browser_path, enable_headless=enable_headless)\n",
     "dict_models = smsj.get_models_info()\n",
-    "file_name = f\"sony_model_info_web_{date.today().strftime('%Y-%m-%d')}\"\n",
-    "FileManager.dict_to_excel(dict_models, file_name=file_name, sheet_name=\"jp\")\n",
+    "file_name_jp = f\"sony_model_info_web_jp_{date.today().strftime('%Y-%m-%d')}\"\n",
+    "FileManager.dict_to_excel(dict_models, file_name=file_name_jp, sheet_name=\"jp\")\n",
     "\n",
     "sms = ModelScraper(webdriver_path = webdriver_path, browser_path=browser_path, enable_headless=enable_headless)\n",
     "dict_models = sms.get_models_info()\n",
@@ -137,6 +137,8 @@
    "outputs": [],
    "source": [
     "files.download(file_name+\".xlsx\") # 파일 다운로드"
+    "files.download(file_name_jp+\".xlsx\") # 파일 다운로드"
+
    ]
   },
   {
