--- a/notebook/quick_guide_get_models.ipynb
+++ b/notebook/quick_guide_get_models.ipynb
@@ -136,9 +136,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "files.download(file_name+\".xlsx\") # 파일 다운로드",
+    "files.download(file_name+\".xlsx\") # 파일 다운로드\n"",
     "files.download(file_name_jp+\".xlsx\") # 파일 다운로드"
-
    ]
   },
   {
