--- a/notebook/quick_guide_get_models.ipynb
+++ b/notebook/quick_guide_get_models.ipynb
@@ -73,21 +73,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6e1cbb67",
+   "metadata": {},
+   "source": [
+    "## Env. 세팅"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "dffd929a-1cb5-4445-b403-f3480fe3b2c8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "getmodelspec.tools.WebDriver.install_chrome_and_driver()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6e1cbb67",
-   "metadata": {},
-   "source": [
-    "## Env. 세팅"
+    "from modelspec.tools import WebDriver\n",
+    "chrome_path_dict = WebDriver.install_chrome_and_driver()"
    ]
   },
   {
