--- a/notebook/quick_guide_get_rtings.ipynb
+++ b/notebook/quick_guide_get_rtings.ipynb
@@ -63,11 +63,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4bee41ea-4783-46e8-91bc-eaf5d4804317",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install -U getmodelspec"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "6e1cbb67",
    "metadata": {},
    "source": [
     "## Env. 세팅"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9757f73c-d4f6-45c8-b409-68317ea3d489",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from modelspec.tools import WebDriver\n",
+    "chrome_path_dict = WebDriver.install_chrome_and_driver()"
    ]
   },
   {
