--- a/notebook/quick_guide_get_rtings.ipynb
+++ b/notebook/quick_guide_get_rtings.ipynb
@@ -33,33 +33,8 @@
     }
    ],
    "source": [
-    "import platform\n",
-    "current_os = platform.system()\n",
-    "if current_os == \"Linux\":\n",
-    "  !pip install --upgrade pip\n",
-    "    \n",
-    "  # Install required Python packages\n",
-    "  !pip install -U openpyxl requests selenium beautifulsoup4 tqdm numpy pandas\n",
-    "  !pip install -U getmodelspec\n",
-    "    \n",
-    "  # Update apt-get\n",
-    "  !apt-get update\n",
-    "\n",
-    "  # Download and setup Chrome\n",
-    "  !wget https://edgedl.me.gvt1.com/edgedl/chrome/chrome-for-testing/119.0.6045.105/linux64/chrome-linux64.zip\n",
-    "  !unzip chrome-linux64.zip\n",
-    "  !rm chrome-linux64.zip\n",
-    "  !mv chrome-linux64 chrome\n",
-    "\n",
-    "  # Download and setup ChromeDriver\n",
-    "  !wget https://edgedl.me.gvt1.com/edgedl/chrome/chrome-for-testing/119.0.6045.105/linux64/chromedriver-linux64.zip\n",
-    "  !unzip chromedriver-linux64.zip\n",
-    "  !rm chromedriver-linux64.zip\n",
-    "  !mv chromedriver-linux64 chromedriver\n",
-    "elif current_os == \"Windows\":\n",
-    "    print(\"windows\")\n",
-    "else:\n",
-    "    print(\"지원하지 않는 운영체제입니다.\")"
+    "!pip install -U openpyxl requests selenium beautifulsoup4 tqdm numpy pandas\n",
+    "!pip install -U getmodelspec"
    ]
   },
   {
@@ -69,7 +44,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -U getmodelspec"
+    "from modelspec.tools import WebDriver\n",
+    "chrome_path_dict = WebDriver.install_chrome_and_driver()"
    ]
   },
   {
