--- a/notebook/quick_guide_sentgpt.ipynb
+++ b/notebook/quick_guide_sentgpt.ipynb
@@ -180,8 +180,8 @@
     "    #그래프 만들기\n",
     "    # df_analyzed_results = analyzed_results_df - 5  #그래프 범위 조정\n",
     "    print(f\"{file_name}, Plot\")\n",
-    "    stm.plot_hist_all(output_folder=output_file_path, file_name=file_name)\n",
-    "    stm.plot_hist_each(output_folder=output_file_path, file_name=file_name)\n"
+    "    stm.plot_hist_all(analyzed_results_df=analyzed_results_df, output_folder=output_file_path, file_name=file_name)\n",
+    "    stm.plot_hist_each(analyzed_results_df=analyzed_results_df, output_folder=output_file_path, file_name=file_name)\n"
    ]
   },
   {
