--- a/quick_guide_get_models.ipynb
+++ b/quick_guide_get_models.ipynb
@@ -21,23 +21,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f81a8945-22e6-44a3-aad3-3aee5c2ac87a",
+   "id": "a25efe6b-4cbe-49d6-83be-f55507d47a90",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -U openpyxl requests selenium beautifulsoup4 tqdm numpy pandas\n",
     "!pip install -U getmodelspec"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "dffd929a-1cb5-4445-b403-f3480fe3b2c8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from modelspec.tools import WebDriver\n",
-    "chrome_path_dict = WebDriver.install_chrome_and_driver()"
+    "from market_research import Installer\n",
+    "Installer.install_chrome_and_driver()\n",
+    "Installer.install_pakage()"
    ]
   },
   {
@@ -50,13 +50,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "8e611f88",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from modelspec import ModelScraper_s, ModelScraper_sjp, ModelScraper_pjp\n",
-    "from modelspec.tools import FileManager\n",
+    "from market_research import SONYSPEC, SONYSPEC_JP, PANASONICSPEC\n",
+    "from market_research.tools import FileManager\n",
     "from datetime import date\n",
     "from google.colab import files"
    ]
@@ -74,6 +74,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac9e9fec-07e4-44ac-ac9e-d6cf05d1b06a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 폴더가 존재하지 않으면 폴더 생성\n",
+    "output_folder = Path('results_spec')  \n",
+    "if not output_folder.exists():\n",
+    "  output_folder.mkdir(parents=True, exist_ok=True)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "0429c013",
    "metadata": {},
@@ -84,32 +97,40 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1eccd54b-edf0-41ef-97d3-92b4bd79465f",
+   "id": "04403ca4-778f-4866-b206-542d682ce23d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "mspjp = ModelScraper_pjp(webdriver_path = webdriver_path, browser_path=browser_path, enable_headless=enable_headless)\n",
-    "dict_models = mspjp.get_models_info()\n",
-    "file_name = f\"pana_jp_model_info_web_{date.today().strftime('%Y-%m-%d')}\"\n",
-    "FileManager.dict_to_excel(dict_models, file_name=file_name, sheet_name=\"global\")"
+    "sonyspec = SONYSPEC(webdriver_path = webdriver_path, browser_path=browser_path, enable_headless=enable_headless)\n",
+    "dict_models = sonyspec.get_models_info()\n",
+    "file_name_s = f\"sony_model_info_web_{date.today().strftime('%Y-%m-%d')}\"\n",
+    "FileManager.dict_to_excel(dict_models, file_name=file_name_s, sheet_name=\"global\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04403ca4-778f-4866-b206-542d682ce23d",
+   "id": "1eccd54b-edf0-41ef-97d3-92b4bd79465f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "smsj = ModelScraperjp(webdriver_path = webdriver_path, browser_path=browser_path, enable_headless=enable_headless)\n",
-    "dict_models = smsj.get_models_info()\n",
-    "file_name_jp = f\"sony_model_info_web_jp_{date.today().strftime('%Y-%m-%d')}\"\n",
-    "FileManager.dict_to_excel(dict_models, file_name=file_name_jp, sheet_name=\"jp\")\n",
-    "\n",
-    "sms = ModelScraper(webdriver_path = webdriver_path, browser_path=browser_path, enable_headless=enable_headless)\n",
-    "dict_models = sms.get_models_info()\n",
-    "file_name = f\"sony_model_info_web_{date.today().strftime('%Y-%m-%d')}\"\n",
-    "FileManager.dict_to_excel(dict_models, file_name=file_name, sheet_name=\"global\")"
+    "panasonicspec = PANASONICSPEC(webdriver_path = webdriver_path, browser_path=browser_path, enable_headless=enable_headless)\n",
+    "dict_models = panasonicspec.get_models_info()\n",
+    "file_name_p = f\"pana_jp_model_info_web_{date.today().strftime('%Y-%m-%d')}\"\n",
+    "FileManager.dict_to_excel(dict_models, file_name=file_name_p, sheet_name=\"global\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc92afec-369b-4235-b528-edc99dbf9750",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sonyspec_jp = SONYSPEC_JP(webdriver_path = webdriver_path, browser_path=browser_path, enable_headless=enable_headless)\n",
+    "dict_models = sonyspec_jp.get_models_info()\n",
+    "file_name_sjp = f\"sony_model_info_web_jp_{date.today().strftime('%Y-%m-%d')}\"\n",
+    "FileManager.dict_to_excel(dict_models, file_name=file_name_sjp, sheet_name=\"jp\")"
    ]
   },
   {
@@ -127,8 +148,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "files.download(file_name+\".xlsx\") # 파일 다운로드\n",
-    "files.download(file_name_jp+\".xlsx\") # 파일 다운로드"
+    "!zip -r /content/results_spec.zip /content/results_spec\n",
+    "files.download('/content/results_spec.zip')"
    ]
   },
   {
