--- a/quick_guide_get_rtings.ipynb
+++ b/quick_guide_get_rtings.ipynb
@@ -20,32 +20,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "9805ebc1-2dba-4654-abdc-2c133b8e5f65",
+   "execution_count": null,
+   "id": "d5ebe2a1-4d88-4b02-9db5-2a8b3a40540e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "windows\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!pip install -U openpyxl requests selenium beautifulsoup4 tqdm numpy pandas\n",
     "!pip install -U getmodelspec"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "4bee41ea-4783-46e8-91bc-eaf5d4804317",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from modelspec.tools import WebDriver\n",
-    "chrome_path_dict = WebDriver.install_chrome_and_driver()"
+    "from market_research import Installer\n",
+    "Installer.install_chrome_and_driver()\n",
+    "Installer.install_pakage()"
    ]
   },
   {
@@ -58,28 +50,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9757f73c-d4f6-45c8-b409-68317ea3d489",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from modelspec.tools import WebDriver\n",
-    "chrome_path_dict = WebDriver.install_chrome_and_driver()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "id": "8e611f88",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from modelspec import Rtings\n",
-    "from modelspec.tools import FileManager\n",
     "from datetime import date\n",
     "from pathlib import Path\n",
     "import pandas as pd\n",
-    "from google.colab import files"
+    "from google.colab import files\n",
+    "from market_research import Rtings\n",
+    "from market_research.tools import FileManager"
    ]
   },
   {
