--- a/quick_guide_textanalysis.ipynb
+++ b/quick_guide_textanalysis.ipynb
@@ -22,28 +22,14 @@
    "execution_count": 1,
    "id": "6acd28c4-03fa-4021-877f-adc9d3d1c120",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "windows\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install -U getmodelspec"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "484b9f3b-ef23-4f3c-9165-8d5ee7a182e8",
-   "metadata": {},
    "outputs": [],
    "source": [
-    "from market_research import Installer\n",
-    "Installer.install_pakage()"
+    "!pip install -U numpy pandas openpyxl tqdm\n",
+    "!pip install -U requests selenium beautifulsoup4 \n",
+    "!pip install -U wordcloud nltk \n",
+    "!pip install -U openai \n",
+    "!pip install -U matplotlib seaborn\n",
+    "!pip install -U getmodelspec"
    ]
   },
   {
