--- a/quick_guide_get_rtings.ipynb
+++ b/quick_guide_get_rtings.ipynb
@@ -25,6 +25,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!pip install -U numpy pandas openpyxl tqdm\n",
+    "!pip install -U requests selenium beautifulsoup4 \n",
+    "!pip install -U wordcloud nltk \n",
+    "!pip install -U openai \n",
+    "!pip install -U matplotlib seaborn\n",
     "!pip install -U getmodelspec"
    ]
   },
@@ -35,9 +40,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from market_research import Installer\n",
-    "Installer.install_chrome_and_driver()\n",
-    "Installer.install_pakage()"
+    "from market_research.tools import Installer\n",
+    "Installer.install_chrome_and_driver()"
    ]
   },
   {
