--- a/quick_guide_get_models.ipynb
+++ b/quick_guide_get_models.ipynb
@@ -35,12 +35,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "6d7dbe47-6128-4dcc-bbbd-b14767e44103",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.kill(os.getpid(), 9) # 런타임 재시작"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "dffd929a-1cb5-4445-b403-f3480fe3b2c8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from market_research.tools import Installer\n",
+    "from market_research.tools.installer import Installer\n",
     "Installer.install_chrome_and_driver()"
    ]
   },
@@ -62,7 +73,8 @@
     "from market_research import SONYSPEC, SONYSPEC_JP, PANASONICSPEC\n",
     "from market_research.tools import FileManager\n",
     "from datetime import date\n",
-    "from google.colab import files"
+    "from google.colab import files\n",
+    "from pathlib import Path"
    ]
   },
   {
