--- a/quick_guide_get_rtings.ipynb
+++ b/quick_guide_get_rtings.ipynb
@@ -35,6 +35,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "3faa8bf4-40af-427b-a8df-051dfb66dc71",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.kill(os.getpid(), 9) # 런타임 재시작"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "4bee41ea-4783-46e8-91bc-eaf5d4804317",
    "metadata": {},
