--- a/quick_guide_textanalysis.ipynb
+++ b/quick_guide_textanalysis.ipynb
@@ -33,6 +33,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ddc20c5a-330c-4c76-9a65-d10fd83ece75",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.kill(os.getpid(), 9) # 런타임 재시작"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c3280e3d-ad0a-4ab6-9d94-a6bb93f7ef9f",
    "metadata": {},
